# duckdb-vcf-extension

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  compile_htslib.sh  copy_htslib.sh  extension_config.cmake  vcpkg.json
.github/workflows/: ExtensionTemplate.yml  MainDistributionPipeline.yml
scripts/: download-htslib.sh  setup-custom-toolchain.sh
src/: vcf_extension.cpp  vcf_reader.cpp
src/htslib/htscodecs/htscodecs/: version.h
src/include/: vcf_extension.hpp
test/sql/: vcf.test
test_data/: chr22_100k_sample.vcf.bgz
